examples/test/testpolicy17347.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17347
  namespace: namespace391
spec:
  podSelector:
    matchLabels:
      key10: value45
      key24: value4
      key25: value35
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key47: value49
      podSelector:
        matchLabels:
          key37: value40
          key19: value12
